--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "next": "12.0.7",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
