--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.5.0",
