--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-reveal": "^1.2.2",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1"
   },
