--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
+    "i": "^0.3.7",
     "next": "12.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
+    "npm": "^8.3.0",
     "react": "17.0.2",
+    "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
     "react-reveal": "^1.2.2",
     "react-slick": "^0.28.1",
